apps/docserver/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docserver
  namespace: cluster
  labels:
    app: docserver
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: docserver
